Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -22,13 +22,14 @@
 
 
     <meta name="author" content="bookbridge" />
-    <meta name="description" content="" />
+    <meta name="description" content="Thoughts and Writings" />
 <meta property="og:site_name" content="bookbridge.github.io"/>
 <meta property="og:type" content="blog"/>
 <meta property="og:title" content="bookbridge.github.io"/>
-<meta property="og:description" content=""/>
+<meta property="og:description" content="Thoughts and Writings"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://bookbridge.github.io"/>
+<meta property="og:image" content="../images/profile.jpg">
 
   <title>bookbridge.github.io &ndash;     Tags
 </title>
@@ -38,11 +39,11 @@
   <aside>
     <div>
       <a href="https://bookbridge.github.io">
-        <img src="https://bookbridge.github.io/theme/img/profile.png" alt="" title="">
+        <img src="../images/profile.jpg" alt="" title="">
       </a>
       <h1><a href="https://bookbridge.github.io"></a></h1>
 
-
+<p>weblog</p>
       <nav>
         <ul class="list">
 
@@ -70,7 +71,8 @@
 </h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="https://bookbridge.github.io/tag/pelican.html">pelican</a> (1)</li>
+    <ul class="list">          <li><a href="https://bookbridge.github.io/tag/flex.html">flex</a> (1)</li>
+          <li><a href="https://bookbridge.github.io/tag/pelican.html">pelican</a> (2)</li>
     </ul>
   </div>
 </article>
@@ -91,8 +93,8 @@
   "@type" : "Blog",
   "name": " bookbridge.github.io ",
   "url" : "https://bookbridge.github.io",
-  "image": "",
-  "description": ""
+  "image": "../images/profile.jpg",
+  "description": "Thoughts and Writings"
 }
 </script>
 </body>
