--- a/archives.html
+++ b/archives.html
@@ -22,13 +22,14 @@
 
 
     <meta name="author" content="bookbridge" />
-    <meta name="description" content="" />
+    <meta name="description" content="Thoughts and Writings" />
 <meta property="og:site_name" content="bookbridge.github.io"/>
 <meta property="og:type" content="blog"/>
 <meta property="og:title" content="bookbridge.github.io"/>
-<meta property="og:description" content=""/>
+<meta property="og:description" content="Thoughts and Writings"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://bookbridge.github.io"/>
+<meta property="og:image" content="../images/profile.jpg">
 
   <title>bookbridge.github.io &ndash;     Archives
 </title>
@@ -38,11 +39,11 @@
   <aside>
     <div>
       <a href="https://bookbridge.github.io">
-        <img src="https://bookbridge.github.io/theme/img/profile.png" alt="" title="">
+        <img src="../images/profile.jpg" alt="" title="">
       </a>
       <h1><a href="https://bookbridge.github.io"></a></h1>
 
-
+<p>weblog</p>
       <nav>
         <ul class="list">
 
@@ -71,6 +72,8 @@
   </header>
   <div>
     <dl>
+      <dt>月 06 2月 2017</dt>
+      <dd><a href="https://bookbridge.github.io/pelicannotemawoflexnibian-geng-suru.html">PelicanのテーマをFlexに変更する</a></dd>
       <dt>木 02 2月 2017</dt>
       <dd><a href="https://bookbridge.github.io/hello-pelican.html">hello pelican</a></dd>
     </dl>
@@ -93,8 +96,8 @@
   "@type" : "Blog",
   "name": " bookbridge.github.io ",
   "url" : "https://bookbridge.github.io",
-  "image": "",
-  "description": ""
+  "image": "../images/profile.jpg",
+  "description": "Thoughts and Writings"
 }
 </script>
 </body>
