--- a/hello-pelican.html
+++ b/hello-pelican.html
@@ -35,7 +35,7 @@
 <meta property="article:author" content="https://bookbridge.github.io/author/bookbridge.html">
 <meta property="article:section" content="pelican, blog"/>
 <meta property="article:tag" content="pelican"/>
-<meta property="og:image" content="">
+<meta property="og:image" content="../images/profile.jpg">
 
   <title>bookbridge.github.io &ndash; hello pelican</title>
 
@@ -44,11 +44,11 @@
   <aside>
     <div>
       <a href="https://bookbridge.github.io">
-        <img src="https://bookbridge.github.io/theme/img/profile.png" alt="" title="">
+        <img src="../images/profile.jpg" alt="" title="">
       </a>
       <h1><a href="https://bookbridge.github.io"></a></h1>
 
-
+<p>weblog</p>
       <nav>
         <ul class="list">
 
@@ -112,8 +112,8 @@
   "@type" : "Blog",
   "name": " bookbridge.github.io ",
   "url" : "https://bookbridge.github.io",
-  "image": "",
-  "description": ""
+  "image": "../images/profile.jpg",
+  "description": "Thoughts and Writings"
 }
 </script>
 </body>
