Generate Pelican site

--- a/pelicannotemawoflexnibian-geng-suru.html
+++ b/pelicannotemawoflexnibian-geng-suru.html
@@ -36,7 +36,7 @@
 <meta property="article:section" content="pelican, blog"/>
 <meta property="article:tag" content="pelican"/>
 <meta property="article:tag" content="flex"/>
-<meta property="og:image" content="../images/profile.jpg">
+<meta property="og:image" content="./images/profile.jpg">
 
   <title>bookbridge.github.io &ndash; PelicanのテーマをFlexに変更する</title>
 
@@ -45,7 +45,7 @@
   <aside>
     <div>
       <a href="https://bookbridge.github.io">
-        <img src="../images/profile.jpg" alt="" title="">
+        <img src="./images/profile.jpg" alt="" title="">
       </a>
       <h1><a href="https://bookbridge.github.io"></a></h1>
 
@@ -135,7 +135,7 @@
   "@type" : "Blog",
   "name": " bookbridge.github.io ",
   "url" : "https://bookbridge.github.io",
-  "image": "../images/profile.jpg",
+  "image": "./images/profile.jpg",
   "description": "Thoughts and Writings"
 }
 </script>
