--- a/categories.html
+++ b/categories.html
@@ -29,7 +29,7 @@
 <meta property="og:description" content="Thoughts and Writings"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://bookbridge.github.io"/>
-<meta property="og:image" content="../images/profile.jpg">
+<meta property="og:image" content="./images/profile.jpg">
 
   <title>bookbridge.github.io &ndash;     Categories
 </title>
@@ -39,7 +39,7 @@
   <aside>
     <div>
       <a href="https://bookbridge.github.io">
-        <img src="../images/profile.jpg" alt="" title="">
+        <img src="./images/profile.jpg" alt="" title="">
       </a>
       <h1><a href="https://bookbridge.github.io"></a></h1>
 
@@ -93,7 +93,7 @@
   "@type" : "Blog",
   "name": " bookbridge.github.io ",
   "url" : "https://bookbridge.github.io",
-  "image": "../images/profile.jpg",
+  "image": "./images/profile.jpg",
   "description": "Thoughts and Writings"
 }
 </script>
