--- a/hello-pelican.html
+++ b/hello-pelican.html
@@ -35,7 +35,7 @@
 <meta property="article:author" content="https://bookbridge.github.io/author/bookbridge.html">
 <meta property="article:section" content="pelican, blog"/>
 <meta property="article:tag" content="pelican"/>
-<meta property="og:image" content="../images/profile.jpg">
+<meta property="og:image" content="./images/profile.jpg">
 
   <title>bookbridge.github.io &ndash; hello pelican</title>
 
@@ -44,7 +44,7 @@
   <aside>
     <div>
       <a href="https://bookbridge.github.io">
-        <img src="../images/profile.jpg" alt="" title="">
+        <img src="./images/profile.jpg" alt="" title="">
       </a>
       <h1><a href="https://bookbridge.github.io"></a></h1>
 
@@ -112,7 +112,7 @@
   "@type" : "Blog",
   "name": " bookbridge.github.io ",
   "url" : "https://bookbridge.github.io",
-  "image": "../images/profile.jpg",
+  "image": "./images/profile.jpg",
   "description": "Thoughts and Writings"
 }
 </script>
