--- a/hello-pelican.html
+++ b/hello-pelican.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" type="text/css" href="https://bookbridge.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="https://bookbridge.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="https://bookbridge.github.io/theme/pygments/xcode.min.css">
   <link rel="stylesheet" type="text/css" href="https://bookbridge.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
@@ -33,7 +33,7 @@
 <meta property="article:published_time" content="2017-02-02 00:00:00+09:00"/>
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="https://bookbridge.github.io/author/bookbridge.html">
-<meta property="article:section" content="pelican, blog"/>
+<meta property="article:section" content="tech"/>
 <meta property="article:tag" content="pelican"/>
 <meta property="og:image" content="./images/profile.jpg">
 
@@ -44,24 +44,24 @@
   <aside>
     <div>
       <a href="https://bookbridge.github.io">
-        <img src="./images/profile.jpg" alt="" title="">
+        <img src="./images/profile.jpg" alt="bookbridge.github.io" title="bookbridge.github.io">
       </a>
-      <h1><a href="https://bookbridge.github.io"></a></h1>
+      <h1><a href="https://bookbridge.github.io">bookbridge.github.io</a></h1>
 
-<p>weblog</p>
+<p>From Silicon to Clouds</p>
       <nav>
         <ul class="list">
 
-          <li><a href="http://getpelican.com/" target="_blank">Pelican</a></li>
-          <li><a href="http://python.org/" target="_blank">Python.org</a></li>
-          <li><a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a></li>
-          <li><a href="#" target="_blank">You can modify those links in your config file</a></li>
+          <li><a href="" target="_blank">about</a></li>
         </ul>
       </nav>
 
       <ul class="social">
-        <li><a class="sc-You can add links in your config file" href="#" target="_blank"><i class="fa fa-You can add links in your config file"></i></a></li>
-        <li><a class="sc-Another social link" href="#" target="_blank"><i class="fa fa-Another social link"></i></a></li>
+        <li><a class="sc-linkedin" href="https://www.linkedin.com/in/yuichi-motohashi-299960104" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+        <li><a class="sc-github" href="https://github.com/bookbridge" target="_blank"><i class="fa fa-github"></i></a></li>
+        <li><a class="sc-google" href="" target="_blank"><i class="fa fa-google"></i></a></li>
+        <li><a class="sc-twitter" href="https://twitter.com/bookbridge" target="_blank"><i class="fa fa-twitter"></i></a></li>
+        <li><a class="sc-rss" href="//bookbridge.github.io/feeds/all.atom.xml" target="_blank"><i class="fa fa-rss"></i></a></li>
       </ul>
     </div>
 
@@ -69,12 +69,21 @@
   </aside>
   <main>
 
+    <nav>
+      <a href="https://bookbridge.github.io">    Home
+</a>
+
+
+      <a href="https://bookbridge.github.io/feeds/all.atom.xml">    Atom
+</a>
+
+    </nav>
 
 <article class="single">
   <header>
     <h1 id="hello-pelican">hello pelican</h1>
     <p>
-          Posted on 木 02 2月 2017 in <a href="https://bookbridge.github.io/category/pelican-blog.html">pelican, blog</a>
+          Posted on Thu 02 February 2017 in <a href="https://bookbridge.github.io/category/tech.html">tech</a>
 
 
     </p>
@@ -97,7 +106,7 @@
 </article>
 
     <footer>
-<p>&copy; bookbridge </p>
+<p>&copy; bookbridge 2016</p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p>    </footer>
   </main>
