Generate Pelican site

--- a/hello-pelican.html
+++ b/hello-pelican.html
@@ -35,7 +35,7 @@
 <meta property="article:author" content="https://bookbridge.github.io/author/bookbridge.html">
 <meta property="article:section" content="tech"/>
 <meta property="article:tag" content="pelican"/>
-<meta property="og:image" content="./images/profile.jpg">
+<meta property="og:image" content="https://bookbridge.github.io/images/profile.jpg">
 
   <title>bookbridge.github.io &ndash; hello pelican</title>
 
@@ -44,7 +44,7 @@
   <aside>
     <div>
       <a href="https://bookbridge.github.io">
-        <img src="./images/profile.jpg" alt="bookbridge.github.io" title="bookbridge.github.io">
+        <img src="https://bookbridge.github.io/images/profile.jpg" alt="bookbridge.github.io" title="bookbridge.github.io">
       </a>
       <h1><a href="https://bookbridge.github.io">bookbridge.github.io</a></h1>
 
@@ -121,7 +121,7 @@
   "@type" : "Blog",
   "name": " bookbridge.github.io ",
   "url" : "https://bookbridge.github.io",
-  "image": "./images/profile.jpg",
+  "image": "https://bookbridge.github.io/images/profile.jpg",
   "description": "Thoughts and Writings"
 }
 </script>
