--- a/pelicannotemawoflexnibian-geng-suru.html
+++ b/pelicannotemawoflexnibian-geng-suru.html
@@ -36,7 +36,7 @@
 <meta property="article:section" content="tech"/>
 <meta property="article:tag" content="pelican"/>
 <meta property="article:tag" content="flex"/>
-<meta property="og:image" content="./images/profile.jpg">
+<meta property="og:image" content="https://bookbridge.github.io/images/profile.jpg">
 
   <title>bookbridge.github.io &ndash; PelicanのテーマをFlexに変更する</title>
 
@@ -45,7 +45,7 @@
   <aside>
     <div>
       <a href="https://bookbridge.github.io">
-        <img src="./images/profile.jpg" alt="bookbridge.github.io" title="bookbridge.github.io">
+        <img src="https://bookbridge.github.io/images/profile.jpg" alt="bookbridge.github.io" title="bookbridge.github.io">
       </a>
       <h1><a href="https://bookbridge.github.io">bookbridge.github.io</a></h1>
 
@@ -160,7 +160,7 @@ SITELOGO = SITEURL + &#39;/images/profile.jpg&#39; #imagesはcontentの中に配
   "@type" : "Blog",
   "name": " bookbridge.github.io ",
   "url" : "https://bookbridge.github.io",
-  "image": "./images/profile.jpg",
+  "image": "https://bookbridge.github.io/images/profile.jpg",
   "description": "Thoughts and Writings"
 }
 </script>
