--- a/archives.html
+++ b/archives.html
@@ -81,8 +81,10 @@
   </header>
   <div>
     <dl>
+      <dt>Sun 26 February 2017</dt>
+      <dd><a href="https://bookbridge.github.io/hatenabutsukumakunoline-botwopythondezuo-ru-2.html">はてなブックマークのline botをpythonで作る (2)</a></dd>
       <dt>Tue 21 February 2017</dt>
-      <dd><a href="https://bookbridge.github.io/hatenabutsukumakunoline-botwopythondezuo-ru.html">はてなブックマークのline botをpythonで作る</a></dd>
+      <dd><a href="https://bookbridge.github.io/hatenabutsukumakunoline-botwopythondezuo-ru-1.html">はてなブックマークのline botをpythonで作る (1)</a></dd>
       <dt>Mon 06 February 2017</dt>
       <dd><a href="https://bookbridge.github.io/pelicannotemawoflexnibian-geng-suru.html">PelicanのテーマをFlexに変更する</a></dd>
       <dt>Thu 02 February 2017</dt>
