--- a/hatenabutsukumakunoline-botwopythondezuo-ru-1.html
+++ b/hatenabutsukumakunoline-botwopythondezuo-ru-1.html
@@ -25,10 +25,10 @@
 <meta name="description" content="まずはサンプルを動かすところまで" />
 <meta name="keywords" content="heroku, line-bot, flask">
 <meta property="og:site_name" content="bookbridge.github.io"/>
-<meta property="og:title" content="はてなブックマークのline botをpythonで作る"/>
+<meta property="og:title" content="はてなブックマークのline botをpythonで作る (1)"/>
 <meta property="og:description" content="まずはサンプルを動かすところまで"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://bookbridge.github.io/hatenabutsukumakunoline-botwopythondezuo-ru.html"/>
+<meta property="og:url" content="https://bookbridge.github.io/hatenabutsukumakunoline-botwopythondezuo-ru-1.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-02-21 00:00:00+09:00"/>
 <meta property="article:modified_time" content=""/>
@@ -39,7 +39,7 @@
 <meta property="article:tag" content="flask"/>
 <meta property="og:image" content="https://bookbridge.github.io/images/profile.jpg">
 
-  <title>bookbridge.github.io &ndash; はてなブックマークのline botをpythonで作る</title>
+  <title>bookbridge.github.io &ndash; はてなブックマークのline botをpythonで作る (1)</title>
 
 </head>
 <body>
@@ -83,7 +83,7 @@
 
 <article class="single">
   <header>
-    <h1 id="hatenabutsukumakunoline-botwopythondezuo-ru">はてなブックマークのline botをpythonで作る</h1>
+    <h1 id="hatenabutsukumakunoline-botwopythondezuo-ru-1">はてなブックマークのline botをpythonで作る (1)</h1>
     <p>
           Posted on Tue 21 February 2017 in <a href="https://bookbridge.github.io/category/tech.html">tech</a>
 
@@ -93,7 +93,13 @@
 
 
   <div>
-    <h2>Line Developersに登録</h2>
+    <h2>前提</h2>
+<ul>
+<li>python 3.6.0</li>
+<li>Flask==0.12</li>
+<li>line-bot-sdk==1.1.0</li>
+</ul>
+<h2>Line Developersに登録</h2>
 <ul>
 <li>Webhookを有効にしておく</li>
 <li>Channel secretとChannel access tokenをメモる</li>
