--- a/hatenabutsukumakunoline-botwopythondezuo-ru-2.html
+++ b/hatenabutsukumakunoline-botwopythondezuo-ru-2.html
@@ -136,6 +136,8 @@
 <p>あとはブックマークページとブックマーク数もAPIから取ってきてURITemplateActionと呼ばれる形式に代入しておけば表示される。</p>
 <p><img src=https://lh3.googleusercontent.com/p6406WJEc78whmHNZ3sDiFaFQvYJr7utv5S7mcK1E0F2-YdxOyK5MX0xPha0GcsUc-gOEWrRCbNgGb5amni9w0z8IRdaU1izpgK5bJI1FnZBjeKhWP_jrMl04WwGy11dQF55V43XlJhJ2q_J9HMA5dOe0tocYfQB25gCCJ8fsF3H9Sm6gDTtlogP5saK9GPDTw0hmTyMwjekTAVYa6xzH7QCiihLdFhWq4alSaDxk1eN1ujRp0kq4lLCKtvWOqnKbhUJmKwzr_isKP30HLqVJHNIpAz7LOOeRyJUB4RFyDGiz0c0WWIzfyWXX10tCjWbH1SLr8oREaEgoKsR2Gt5loYD_yUVpmIwIpkEy8-KvlDEO5--km_WIndL2kQPqdjXcHA8293LSrcr1cYWi53vHIETkZlquSDpJPkZ_bLUytnz0_asT0mkB9B3BNIdZ4rBoMzqj5wJh7kTOuyDrs61uJ-WFQ0YAm4DlXDhlTcO-U_Re76iSz0FHShLEBzn4mcMbE3m_b8Ywf6WY9uRlYVo9AiTXGXsyhiMaJcSOgO9oqp6zljAzBryA8nCoi6AwPpt47BXv_wlH1lFiQGmFrzDxJFmbRXV_CBEygo85OR-iCMI71NRVfDW7A=w750-h1334-no width=320px></p>
 <p>こんな感じで。</p>
+<h2>ソース</h2>
+<p>https://github.com/bookbridge/hatebu-bot</p>
   </div>
   <div class="tag-cloud">
     <p>
