Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -81,13 +81,15 @@
   </header>
   <div>
     <dl>
-      <dt>Sun 26 February 2017</dt>
+      <dt>水 29 3月 2017</dt>
+      <dd><a href="https://bookbridge.github.io/raspberry-pi-3-wotensorflowtokameramoziyurugashi-eruyounisetsutoatsupusuru.html">Raspberry pi 3 をtensorflowとカメラモジュールが使えるようにセットアップする</a></dd>
+      <dt>日 26 2月 2017</dt>
       <dd><a href="https://bookbridge.github.io/hatenabutsukumakunoline-botwopythondezuo-ru-2.html">はてなブックマークのline botをpythonで作る (2)</a></dd>
-      <dt>Tue 21 February 2017</dt>
+      <dt>火 21 2月 2017</dt>
       <dd><a href="https://bookbridge.github.io/hatenabutsukumakunoline-botwopythondezuo-ru-1.html">はてなブックマークのline botをpythonで作る (1)</a></dd>
-      <dt>Mon 06 February 2017</dt>
+      <dt>月 06 2月 2017</dt>
       <dd><a href="https://bookbridge.github.io/pelicannotemawoflexnibian-geng-suru.html">PelicanのテーマをFlexに変更する</a></dd>
-      <dt>Thu 02 February 2017</dt>
+      <dt>木 02 2月 2017</dt>
       <dd><a href="https://bookbridge.github.io/hello-pelican.html">hello pelican</a></dd>
     </dl>
   </div>
