--- a/hatenabutsukumakunoline-botwopythondezuo-ru-1.html
+++ b/hatenabutsukumakunoline-botwopythondezuo-ru-1.html
@@ -85,7 +85,7 @@
   <header>
     <h1 id="hatenabutsukumakunoline-botwopythondezuo-ru-1">はてなブックマークのline botをpythonで作る (1)</h1>
     <p>
-          Posted on Tue 21 February 2017 in <a href="https://bookbridge.github.io/category/tech.html">tech</a>
+          Posted on 火 21 2月 2017 in <a href="https://bookbridge.github.io/category/tech.html">tech</a>
 
 
     </p>
