--- a/hello-pelican.html
+++ b/hello-pelican.html
@@ -83,7 +83,7 @@
   <header>
     <h1 id="hello-pelican">hello pelican</h1>
     <p>
-          Posted on Thu 02 February 2017 in <a href="https://bookbridge.github.io/category/tech.html">tech</a>
+          Posted on 木 02 2月 2017 in <a href="https://bookbridge.github.io/category/tech.html">tech</a>
 
 
     </p>
