--- a/pelicannotemawoflexnibian-geng-suru.html
+++ b/pelicannotemawoflexnibian-geng-suru.html
@@ -84,7 +84,7 @@
   <header>
     <h1 id="pelicannotemawoflexnibian-geng-suru">PelicanのテーマをFlexに変更する</h1>
     <p>
-          Posted on Mon 06 February 2017 in <a href="https://bookbridge.github.io/category/tech.html">tech</a>
+          Posted on 月 06 2月 2017 in <a href="https://bookbridge.github.io/category/tech.html">tech</a>
 
 
     </p>
