--- a/tags.html
+++ b/tags.html
@@ -80,11 +80,15 @@
 </h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="https://bookbridge.github.io/tag/flask.html">flask</a> (2)</li>
+    <ul class="list">          <li><a href="https://bookbridge.github.io/tag/camreamodule.html">camreamodule</a> (1)</li>
+          <li><a href="https://bookbridge.github.io/tag/flask.html">flask</a> (2)</li>
           <li><a href="https://bookbridge.github.io/tag/flex.html">flex</a> (1)</li>
           <li><a href="https://bookbridge.github.io/tag/heroku.html">heroku</a> (2)</li>
+          <li><a href="https://bookbridge.github.io/tag/keras.html">keras</a> (1)</li>
           <li><a href="https://bookbridge.github.io/tag/line-bot.html">line-bot</a> (2)</li>
           <li><a href="https://bookbridge.github.io/tag/pelican.html">pelican</a> (2)</li>
+          <li><a href="https://bookbridge.github.io/tag/raspberrypi.html">raspberrypi</a> (1)</li>
+          <li><a href="https://bookbridge.github.io/tag/tensorflow.html">tensorflow</a> (1)</li>
     </ul>
   </div>
 </article>
