--- a/hatenabutsukumakunoline-botwopythondezuo-ru-2.html
+++ b/hatenabutsukumakunoline-botwopythondezuo-ru-2.html
@@ -85,7 +85,7 @@
   <header>
     <h1 id="hatenabutsukumakunoline-botwopythondezuo-ru-2">はてなブックマークのline botをpythonで作る (2)</h1>
     <p>
-          Posted on Sun 26 February 2017 in <a href="https://bookbridge.github.io/category/tech.html">tech</a>
+          Posted on 日 26 2月 2017 in <a href="https://bookbridge.github.io/category/tech.html">tech</a>
 
 
     </p>
